@@ -31,3 +31,5 @@ Adding a new test
 3) Add the test and expected results to CVS.
    NOTE: Anything added to the expected directory needs the -kb option to
    cvs to ensure that carriage return/line feeds are preserved.
+   NOTE: GNUmakefile's may not show up as unknown files which may cause
+   problems when adding a test.
