@@ -1,3 +1,13 @@
+Thu Jul  7 13:35:00 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * README:
+
+          Added a note about GNUmakefiles.
+
+        * run_tests.pl:
+
+          Take CVS directories into account.
+
 Thu Jul  7 11:21:20 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * MPC test framework:
